[project]
name = "dingbot"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "dingtalk-stream>=0.24.2",
    "loguru>=0.7.3",
    "openpyxl>=3.1.5",
    "pandas>=2.3.1",
    "pydantic",
    "pyyaml>=6.0.2",
    "requests>=2.32.4",
]
